feature: Add endpoints for getting materials and circuits
