# openapi.yaml
@@ -491,6 +491,24 @@ paths:
         '500':
           description: Server Error
 
+    get:
+      tags:
+        - Material
+      summary: Get all materials in the system
+      responses:
+        '200':
+          description: Successfully retreived materials
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Material'
+        '400':
+          description: Bad request
+        '401':
+          description: User cannot add Materials, authentication failed
+        '500':
+          description: Server Error
+
 
   /material/{publicationId}:
     put:
@@ -634,6 +652,24 @@ paths:
                 nodes:
                   []
 
+      responses:
+        '200':
+          description: Successfully added circuit
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Circuit'
+        '400':
+          description: Bad request
+        '401':
+          description: User cannot add circuits, authentication failed
+        '500':
+          description: Server Error
+
+    get:
+      tags:
+        - Circuit
+      summary: Get all circuits in the system
       responses:
         '200':
           description: Successfully added circuit
